Issue #1445: Fix a SystemError when accessing the ``cell_contents`` attribute of an empty cell object.  Now a ValueError is raised.

Backport of r59170.